# capcom

./: LICENSE  README.md
src/: Cargo.toml
src/capcom/: Cargo.toml
src/capcom/src/: lib.rs
src/xtask/: Cargo.toml
src/xtask/src/: config.rs  main.rs  vmware.rs
